# peripheral.steamcontroller

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLibUSB.cmake
debian/: changelog.in  control  copyright  kodi-peripheral-steamcontroller.install  rules
depends/common/libusb/: CMakeLists.txt  libusb.txt
peripheral.steamcontroller/: addon.xml  addon.xml.in
src/: addon.cpp  addon.h
src/steamcontroller/: SteamController.cpp  SteamController.h  SteamControllerInput.cpp  SteamControllerInput.h  SteamControllerManager.cpp  SteamControllerManager.h  SteamControllerTranslator.cpp  SteamControllerTranslator.h  SteamControllerTypes.h
src/steamcontroller/interfaces/: IFeedbackCallback.h
src/usb/: USBConfiguration.cpp  USBConfiguration.h  USBContext.cpp  USBContext.h  USBDevice.cpp  USBDevice.h  USBDeviceHandle.cpp  USBDeviceHandle.h  USBInterface.cpp  USBInterface.h  USBInterfaceSetting.cpp  USBInterfaceSetting.h  USBThread.cpp  USBThread.h  USBTransfer.cpp  USBTransfer.h  USBTypes.h
src/usb/interfaces/: IMessageCallback.h  ISendMessageCallback.h  ITransferCallback.h  ITransferObserver.h
src/util/: Log.cpp  Log.h
